# some-c

./: CMakeLists.txt
30-days/: day08.c  luyen-struct-2.c  luyen-struct.c  luyen-ve-ham.c
30-days/luyen-file/: ghi-file.txt  luyen-file-2.txt  luyen-file.txt
30-days/mang-2-chieu/: mang-2-chieu.txt
hackerrank-language-c/: 00.hello.c  01.play-char.c  02.sum-diff.c  03.max-4.c  04.wth-pointer.c  04b.swap.c  04c.kobiet.c  aa.c
hackerrank-language-c/05.ngau-nhien/: 05.ngau-nhien.c  inf2.txt  inf3.txt  inf4.txt  inf5.txt  outf3.txt  outf4.txt  outf5.txt
hackerrank-language-c/final-practice/: _mau_.c
hackerrank-language-c/final-practice/00/: 00.c  00.txt
hackerrank-language-c/final-practice/01.vu-giang-nam/: 01.c
luyen-file/: doc-file-2.c  doc-file.c  ghi-file.c
mang-2-chieu/: mang-2-chieu.c
sample-student-submission/: README.md
sample-student-submission/0122333.nguyen-van-bai1a1b/1b/: 1b.c
sample-student-submission/c1903l/0122333.nguyen-van-bai2/2/: 2.txt
